Fix issue with not centered scroll icon

--- a/src/components/ScrollDownIcon/ScrollDownIcon.module.scss
+++ b/src/components/ScrollDownIcon/ScrollDownIcon.module.scss
@@ -1,12 +1,9 @@
 @import "../../styles/variables";
 .sroll__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     opacity: 0;
     position: absolute;
     left: 50%;
-    bottom: 5%;
+    bottom: 8%;
     transform: translateX(-50%);
     animation: appearIn 0.8s forwards;
 
@@ -17,8 +14,11 @@
     height: 45px;
     border: 3px solid $primary-white;
     border-radius: 60px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
 
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     &::before {
         content: "";
         width: 8px;
@@ -26,7 +26,7 @@
         position: absolute;
         top: 10px;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translate(-50%, -50%);
         background-color: $primary-white;
         border-radius: 50%;
         opacity: 1;
